--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="discripion" content="ココはDaichiKohyamaの自己紹介のページです。"
+    <meta name="discripion" content="ココはDaichiKohyamaの自己紹介のページです。">
     <title>About me</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -29,7 +29,7 @@
             <li><a href="https://github.com/DaichiKohyama">githubリンク</a></li>
         </ul>
     </div>
-    <div class="col-sm-2" style="display:block; background-color:gray; height:500;">
+    <div class="col-sm-2 nantoka" style="display:block; background-color:gray; height:500;">
         &nbsp;
     </div>
   </body>
