--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>About me</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- 作成したCSSの読み込み -->
+    <link rel="stylesheet" href="stylesheet.css">
     <!-- jQuery読み込み -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
@@ -15,22 +17,18 @@
   </head>
   <body>
     <header class="col-sm-12" style="background-color:orange;">
-        <img src="icon.JPG" width="128" height="128" >
+        <img class="icon" src="icon.jpg">
+        <h1>Daihi Kohyama</h1>
     </header>
-    <div class="col-sm-2" style="background-color:gray;">
-        
-    </div>
-    <div class="col-sm-8" style="background-color:gray;">
-        <h1>ABOUT:Daihi Kohyama</h1>
+    <div class="col-sm-12 aboutme">
+        <h2>About me</h2>
+        <p>ボードゲームで遊ぶのが趣味の新米プログラマです。</p>
+        <p>これからWebアプリを公開していこうと思います。宜しくお願いします。</p>
+        <h2>リンク</h2>
         <ul>
-            <li>aaaaaaa</li>
-            <li>bbbbbbb</li>
-            <li>ccccccc</li>
-            <li><a href="https://github.com/DaichiKohyama">githubリンク</a></li>
+            <li><a href="https://github.com/DaichiKohyama">github</a></li>
         </ul>
     </div>
-    <div class="col-sm-2 nantoka" style="display:block; background-color:gray; height:500;">
-        &nbsp;
-    </div>
+
   </body>
 </html>
